--- a/valentines/public/index.html
+++ b/valentines/public/index.html
@@ -67,7 +67,7 @@
 				document.getElementById("mainText").classList.add("text-gray-500")
 				document.getElementById("mainGif").src = "gifs/refuse.gif"
 				document.getElementById("buttons").remove()
-				document.getElementById("mainText").innerText = "That's fine..."
+				document.getElementById("mainText").innerText = "testo na garnu na mero hissicha"
 				vibrate(900)
 			}
 			else if(noCount > 4) document.getElementById("mainGif").src = "gifs/4.gif"
@@ -90,7 +90,7 @@
 	<div>
 		<img id="mainGif" src="" alt="Illustration" class="mx-auto w-48 h-48" />
 
-		<h3 id="mainText" class="mt-6 py-1 px-4 text-mandy-400 hover:text-mandy-500 ease-in transition text-3xl leading-10 font-semibold">Will you be my Valentine?</h3>
+		<h3 id="mainText" class="mt-6 py-1 px-4 text-mandy-400 hover:text-mandy-500 ease-in transition text-3xl leading-10 font-semibold">Will you be my Valentine, my dear Jenny?</h3>
 		
 		<div id="buttons" class="mt-8 space-x-3 space-y-3">
 			<button id="yesButton" onclick="yes()" style="padding-left: 2rem; padding-right: 2rem; padding-top: 0.5rem; padding-bottom: 0.5rem;" class="text-white ease-in transition shadow-xl rounded-lg bg-green-400 hover:bg-green-500/90">Yes</button>
